# vio_system

devel/: .catkin  setup.sh
devel/lib/camera_model/: Calibration
devel/lib/feature_tracker/: feature_tracker
devel/lib/pkgconfig/: camera_model.pc  feature_tracker.pc  vio_system_estimator.pc
devel/share/camera_model/cmake/: camera_modelConfig.cmake
devel/share/feature_tracker/cmake/: feature_trackerConfig.cmake
devel/share/vio_system_estimator/cmake/: vio_system_estimatorConfig.cmake
src/camera_model/: CMakeLists.txt
src/camera_model/src/calib/: CameraCalibration.cc
src/camera_model/src/chessboard/: Chessboard.cc
src/config/: vio_system_config.yaml
src/feature_tracker/: CMakeLists.txt
src/feature_tracker/include/feature_tracker/: feature_tracker.h  parameters.h
src/feature_tracker/launch/: feature.launch  vio_system_rviz.launch
src/feature_tracker/src/: feature_tracker.cpp  feature_tracker_node.cpp  parameters.cpp
src/vio_system_estimator/: CMakeLists.txt
src/vio_system_estimator/include/vio_system_estimator/: estimator.h  feature_manager.h  vio_parameters.h
src/vio_system_estimator/include/vio_system_estimator/factor/: integration_base.h  marginalization_factor.h  projection_factor.h  projection_td_factor.h
src/vio_system_estimator/src/: estimator.cpp  feature_manager.cpp  vio_parameters.cpp  vio_system_estimator_node.cpp
src/vio_system_estimator/src/factor/: marginalization_factor.cpp  projection_factor.cpp  projection_td_factor.cpp
src/vio_system_estimator/src/utility/: camera_pose_visualization.cpp  utility.cpp  visualization.cpp
(+2 files in other folders)
